--- a/editor.html
+++ b/editor.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ProSnap Screenshot Editor</title>
+    <title>PrimeShot Screenshot Editor</title>
     <style>
       * {
         margin: 0;
@@ -371,7 +371,7 @@
         border: 1px solid #555;
         border-radius: 4px;
         padding: 10px;
-        font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
+        font-family: "Monaco", "Menlo", "Ubuntu Mono", monospace;
         font-size: 13px;
         line-height: 1.5;
         resize: none;
@@ -429,7 +429,7 @@
     <div id="no-screenshot" class="no-screenshot">
       <h2>⚠️ No Screenshot Found</h2>
       <p>
-        Click the ProSnap extension icon on any page to capture a screenshot.
+        Click the PrimeShot extension icon on any page to capture a screenshot.
       </p>
     </div>
 
