--- a/popup.html
+++ b/popup.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="ProSnap Screenshot Tool - Capture and annotate screenshots"
+      content="PrimeShot Screenshot Tool - Capture and annotate screenshots"
     />
-    <title>ProSnap</title>
+    <title>PrimeShot</title>
     <style>
       body {
         width: 260px;
@@ -205,8 +205,8 @@
     <!-- Header -->
     <div class="header">
       <div class="brand">
-        <img src="icons/icon48.png" alt="ProSnap Logo" />
-        <span>ProSnap</span>
+        <img src="icons/icon48.png" alt="PrimeShot Logo" />
+        <span>PrimeShot</span>
       </div>
       <div class="badge">v1.2</div>
     </div>
